--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set                   (CMAKE_CXX_STANDARD 17)
 if   (MSVC)
   add_compile_options (/W4)
 else ()
-  add_compile_options (-Wall -Wextra -pedantic)
+  add_compile_options (-Wall -Wextra -pedantic -fconstexpr-depth=1271242)
 endif()
 
 ##################################################    Sources     ##################################################
