--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,12 @@ cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 project               (ENTROPY_BOT VERSION 1.0 LANGUAGES CXX)
 list                  (APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 set_property          (GLOBAL PROPERTY USE_FOLDERS ON)
-set                   (CMAKE_BUILD_TYPE Release)
 set                   (CMAKE_CXX_STANDARD 17)
 
 if   (MSVC)
   add_compile_options (/W4)
 else ()
-  add_compile_options (-Wall -Wextra -pedantic -fconstexpr-depth=1271242)
+  add_compile_options (-Wall -Wextra -pedantic)
 endif()
 
 ##################################################    Sources     ##################################################
